[package]
name = "roog-vst"
version = "0.1.0"
authors = ["Veeti Haapsamo <veeti.haapsamo@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
cpal = "0.8.2"
roog = { path = "../roog/" }
# vst = "*"
vst = { git = "https://github.com/askeksa/rust-vst", branch = "thread_safe_plugin" }

[lib]
name = "roogvst"
crate-type = ["cdylib"]